[package]
name = "tic-tac-toe-core"
version = "0.1.0"
authors = ["Michael Birch <birchmd@casperlabs.io>"]
edition = "2018"

[lib]
name = "tic_tac_toe_core"
crate-type = ["lib"]

[dependencies]
num-derive = { version = "0.2.5", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
